--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 }
 
 plugins {
+    id 'maven'
     id "org.jetbrains.kotlin.jvm" version "1.2.10"
     id "org.jetbrains.kotlin.kapt" version "1.2.10"
     id "com.github.johnrengelman.shadow" version "1.2.4"
@@ -62,3 +63,6 @@ compileKotlin {
         jvmTarget = "1.8"
     }
 }
+
+
+install.dependsOn shadowJar
